--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
+@font-face {
+    font-family: 'Script';
+    src: url(ShadowsIntoLight-Regular.ttf);
+}
+
 html {
     background-color: #282828;
     color: #FFFFFF;
     margin: 0;
     padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
@@ -11,13 +17,18 @@ body {
 }
 
 #navBar {
+    font-family: "Script";
     background-color: #000000;
     padding: 0.5em;
     padding-left: 1em;
     padding-right: 3em;
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
+}
+
+#navBar a {
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 
@@ -47,6 +58,23 @@ body {
 
 #mainBody{
     margin: 3em;
+}
+
+#Banner {
+    position: relative;
+    font-size: 2em;
+}
+
+#Banner img {
+    width: 100%;
+}
+
+#Banner div {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #header {
@@ -105,4 +133,27 @@ body {
 
 #contact h3 {
     text-align: center;
+}
+
+.collapsible {
+    background-color: #940000;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.active, .collapsible:hover {
+    background-color: #000000;
+}
+
+.collapse {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #000000;
 }
