Updated Contact Page More

--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,15 @@ body {
 }
 
 #navBar {
+    overflow: hidden;
     font-family: "Script";
     background-color: #000000;
     padding: 0.5em;
     padding-left: 1em;
     padding-right: 3em;
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
+    height: 10vh;    
 }
 
 #navBar a {
@@ -98,17 +100,16 @@ body {
 }
 
 #contact {
-    height: 100%;
-    width: 50%;
-    background-color: #000000;
+    height: 90vh;
+    width: 60%;
+    background-color: #940000;
     padding: 0.5em;
-    border-radius: 0.2em;
 }
 
 #contact div{
     padding: 1em;
     padding-bottom: 3em;
-    padding-left: 4em;
+    padding-left: 6em;
 }
 
 #contact input {
@@ -151,4 +152,14 @@ body {
     display: none;
     overflow: hidden;
     background-color: #000000;
+}
+
+#contact-img {
+    height: 90vh;
+    overflow: hidden;
+}
+
+.btn {
+    background-color: #000000 !important;
+    width: 60% !important;
 }
