Updated all pages to be mobile
*disabled contact page to work on later

--- a/styles.css
+++ b/styles.css
@@ -27,15 +27,10 @@ body {
 }
 
 #navBar {
-    overflow: hidden;
     font-family: "Script";
-    background-color: #000000;
-    padding: 0.5em;
-    padding-left: 1em;
-    padding-right: 3em;
+    background-color: #000000 !important;
     display: flex;
-    justify-content: space-between;
-    height: 10vh;    
+    justify-content: space-between;   
 }
 
 #navBar a {
@@ -43,6 +38,9 @@ body {
     color: #FFFFFF;
 }
 
+.navbar-toggler {
+    background-color: #FFFFFF !important;
+}
 
 #leftSide {
     display: flex;
@@ -155,7 +153,7 @@ body {
     background-color: #000000;
 }
 
-.collapse {
+.collapseC {
     padding: 0 18px;
     display: none;
     overflow: hidden;
@@ -189,3 +187,37 @@ body {
     margin-right: 2em;
     width: 15em !important;
 }
+
+
+@media screen and (max-width: 400px) {
+    #navBrand {
+        font-size: 5.5vw !important;
+    }
+
+    .fontAdjust {
+        font-size: 5vw !important;
+    }
+
+    #header h1{
+        padding-top: 1em;
+        text-align: center;
+        font-size: 4.5vw !important;
+    }
+
+    #header h4{
+        text-align: center;
+        font-size: 3.5vw !important;
+    }
+
+    #header p {
+        text-align: center;
+        font-size: 3.8vw !important;
+
+    }
+
+    #contact-img {
+        display:none;
+        overflow: hidden;
+    }
+}
+
